--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Inicio</a>
+		<a href="/about/">Sobre mi</a>
+		<a href="/blog/">Blog</a>
+		
+		<h1>Sobre mi</h1>
+		<h2>... ¡y mi nuevo sitio Astro!</h2>
+
 		<h1>Astro</h1>
 		<h1>Mi sitio Astro</h1>
 	</body>
