--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,28 @@
 ---
+import '../styles/global.css';
 
+import Header from '../components/Header.astro'
+
+import Footer from '../components/Footer.astro'
+
+const pageTitle = "Sobre mi";
+
+const identity = {
+  firstName: "RogerB",
+  country: "Honduras",
+  occupation: "Escritor técnico",
+  hobbies: ["fotografia", "observación de aves", "peñarol"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "navy";
+const fontWeigth = "bold";
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -8,18 +31,36 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeigth, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: green;
+        color: var(--skillColor);
+        font-weight: var(--fontWeigth);
+        text-transform: var(--textCase);
+      }
+    </style>
+
 	</head>
     <body>
-        <a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>
+        <Header/>
 
-        <h1>Sobre mi</h1>
+        <h1>{pageTitle}</h1>
         <h2>... ¡y mi nuevo sitio Astro!</h2>
       
         <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
       
         <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
+
+        <p>Mis habilidades son:</p>
+        <ul>
+          {skills.map((skill) => <li class="skill">{skill}</li>)}
+        </ul>
+
+        <Footer />
       </body>
 </html>
