--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,22 +1,30 @@
 ---
+import '../styles/global.css';
 
+import Header from '../components/Header.astro'
+
+import Footer from '../components/Footer.astro'
+
+const pageTitle = "Mi Blog de aprendizaje";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
+<html lang="es">
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width" />
+        <title>{pageTitle}</title>
+    </head>
     <body>
-        <a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>
-        
-        <h1>Mi sitio Astro</h1>
-        <h1>Mi blog de Astro aprendizaje</h1>
-        <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+        <Header />
+
+        <h1>{pageTitle}</h1>
+        <p>Aquí es donde publicaré acerca de mi viaje aprendiendo Astro./p>
+        <ul>
+            <li><a href="/posts/post-1/">Publicación 1</a></li>
+            <li><a href="/posts/post-2/">Publicacion 2</a></li>
+            <li><a href="/posts/post-3/">Publicacion 3</a></li> 
+        </ul>
+
+        <Footer />
     </body>
 </html>
