--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,11 @@
 ---
 import Navigation from './Navigation.astro'
+import Hamburguer from './Hamburguer.astro'
 ---
 
 <header>
     <nav>
         <Navigation />
+        <Hamburguer />
     </nav>
 </header>
