--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -26,5 +26,9 @@ const pageTitle = "Mi Blog de aprendizaje";
         </ul>
 
         <Footer />
+
+		<script>
+			import "../scripts/menu.js";
+		</script>
     </body>
 </html>
