--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,7 @@
 ---
 import '../styles/global.css';
 
-import Header from '../components/Header.astro'
-
-import Footer from '../components/Footer.astro'
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Sobre mi";
 
@@ -25,31 +23,8 @@ const fontWeigth = "bold";
 const textCase = "uppercase"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-    <style define:vars={{skillColor, fontWeigth, textCase}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: green;
-        color: var(--skillColor);
-        font-weight: var(--fontWeigth);
-        text-transform: var(--textCase);
-      }
-    </style>
-
-	</head>
-    <body>
-        <Header/>
-
-        <h1>{pageTitle}</h1>
+<BaseLayout pageTitle={pageTitle}>
+  <h1>{pageTitle}</h1>
         <h2>... ¡y mi nuevo sitio Astro!</h2>
       
         <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
@@ -60,11 +35,4 @@ const textCase = "uppercase"
         <ul>
           {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
-
-        <Footer />
-        
-        <script>
-          import "../scripts/menu.js";
-        </script>
-      </body>
-</html>
+</BaseLayout>
