--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,8 +1,14 @@
 ---
+import BaseLayout from "./BaseLayout.astro";
+
 const { frontmatter } = Astro.props;
 ---
-
-<h1>{frontmatter.title}</h1>
-<p>Escrito por {frontmatter.author}</p>
-<p>Publicado el: {frontmatter.pubDate.toString().slice(0,10)}</p>
-<slot />
+<BaseLayout pageTitle={frontmatter.title}>
+    <!-- <h1>{frontmatter.title}</h1> -->
+    <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
+    <p><em>{frontmatter.description}</em></p>
+    <p>Escrito por: {frontmatter.author}</p>
+    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <slot />
+    <slot />
+</BaseLayout>
